--- a/UI/Scenes/SignUp/SignUp.storyboard
+++ b/UI/Scenes/SignUp/SignUp.storyboard
@@ -17,31 +17,46 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="Cwm-AJ-Q2G">
-                                <rect key="frame" x="188.5" y="429.5" width="37" height="37"/>
-                            </activityIndicatorView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mag-3T-2mr">
-                                <rect key="frame" x="32" y="400" width="350" height="40"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mag-3T-2mr">
+                                <rect key="frame" x="32" y="528" width="350" height="62"/>
                                 <color key="backgroundColor" systemColor="systemOrangeColor"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="23"/>
-                                <state key="normal" title="Salvar">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="62" id="v8b-RR-L5j"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
+                                <inset key="contentEdgeInsets" minX="8" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <state key="normal" title="Cadastrar">
                                     <color key="titleColor" red="0.18823686240000001" green="0.18823254110000001" blue="0.1882354319" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </state>
                             </button>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="Cwm-AJ-Q2G">
+                                <rect key="frame" x="337" y="540.5" width="37" height="37"/>
+                                <color key="tintColor" red="0.82442569730000004" green="0.28324592110000002" blue="0.26663517949999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="color" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </activityIndicatorView>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Nome" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Zyg-WF-U58" userLabel="nameTextField">
-                                <rect key="frame" x="16" y="184" width="382" height="34"/>
+                                <rect key="frame" x="16" y="240" width="382" height="52"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="52" id="2Oi-ya-gH5"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" textContentType="name"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oNb-cE-Ke4" userLabel="emailTextField">
-                                <rect key="frame" x="16" y="234" width="382" height="34"/>
+                                <rect key="frame" x="16" y="308" width="382" height="52"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="52" id="Zte-LL-Aiv"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" keyboardType="emailAddress" textContentType="email"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Senha" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HMH-uc-rpO" userLabel="passwordTextField">
-                                <rect key="frame" x="16" y="284" width="382" height="34"/>
+                                <rect key="frame" x="16" y="376" width="382" height="52"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="52" id="9bw-0L-Ka7"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" textContentType="new-password"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="📱" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zlN-qc-V5H">
                                 <rect key="frame" x="158.5" y="60" width="97" height="108"/>
@@ -50,32 +65,44 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Confirmação da senha" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZVf-Co-XjR" userLabel="passwordConfirmationTextField">
-                                <rect key="frame" x="16" y="334" width="382" height="34"/>
+                                <rect key="frame" x="16" y="444" width="382" height="52"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="52" id="hHv-Cv-KYQ"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" textContentType="new-password"/>
                             </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CleanApp" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hoc-kq-SIR">
+                                <rect key="frame" x="8" y="176" width="398" height="32"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="26"/>
+                                <color key="textColor" systemColor="systemOrangeColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="yJT-qv-TjW"/>
-                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Cwm-AJ-Q2G" firstAttribute="centerX" secondItem="hZG-X1-12T" secondAttribute="centerX" id="4aE-M6-6Mp"/>
                             <constraint firstItem="HMH-uc-rpO" firstAttribute="leading" secondItem="yJT-qv-TjW" secondAttribute="leading" constant="16" id="9jK-wa-36D"/>
                             <constraint firstItem="yJT-qv-TjW" firstAttribute="trailing" secondItem="Zyg-WF-U58" secondAttribute="trailing" constant="16" id="ANf-O0-oYL"/>
                             <constraint firstItem="ZVf-Co-XjR" firstAttribute="leading" secondItem="yJT-qv-TjW" secondAttribute="leading" constant="16" id="DRa-YD-bkN"/>
                             <constraint firstItem="Mag-3T-2mr" firstAttribute="top" secondItem="ZVf-Co-XjR" secondAttribute="bottom" constant="32" id="GFz-qH-gW3"/>
                             <constraint firstItem="Mag-3T-2mr" firstAttribute="leading" secondItem="yJT-qv-TjW" secondAttribute="leading" constant="32" id="J7e-eK-xuv"/>
                             <constraint firstItem="zlN-qc-V5H" firstAttribute="centerX" secondItem="hZG-X1-12T" secondAttribute="centerX" id="Kwx-yl-19O"/>
+                            <constraint firstItem="yJT-qv-TjW" firstAttribute="trailing" secondItem="Hoc-kq-SIR" secondAttribute="trailing" constant="8" id="QEr-eI-5uj"/>
                             <constraint firstItem="yJT-qv-TjW" firstAttribute="trailing" secondItem="oNb-cE-Ke4" secondAttribute="trailing" constant="16" id="QlA-df-v0h"/>
                             <constraint firstItem="yJT-qv-TjW" firstAttribute="trailing" secondItem="ZVf-Co-XjR" secondAttribute="trailing" constant="16" id="TM3-cX-kV3"/>
                             <constraint firstItem="oNb-cE-Ke4" firstAttribute="top" secondItem="Zyg-WF-U58" secondAttribute="bottom" constant="16" id="U2t-nf-WKn"/>
+                            <constraint firstItem="Mag-3T-2mr" firstAttribute="trailing" secondItem="Cwm-AJ-Q2G" secondAttribute="trailing" constant="8" id="VLO-pX-UJa"/>
+                            <constraint firstItem="Cwm-AJ-Q2G" firstAttribute="centerY" secondItem="Mag-3T-2mr" secondAttribute="centerY" id="XEZ-bp-Sda"/>
+                            <constraint firstItem="Hoc-kq-SIR" firstAttribute="leading" secondItem="yJT-qv-TjW" secondAttribute="leading" constant="8" id="Zt0-FC-ReC"/>
                             <constraint firstItem="ZVf-Co-XjR" firstAttribute="top" secondItem="HMH-uc-rpO" secondAttribute="bottom" constant="16" id="adV-GB-9pv"/>
                             <constraint firstItem="oNb-cE-Ke4" firstAttribute="leading" secondItem="yJT-qv-TjW" secondAttribute="leading" constant="16" id="bDH-tO-w9m"/>
                             <constraint firstItem="Zyg-WF-U58" firstAttribute="leading" secondItem="yJT-qv-TjW" secondAttribute="leading" constant="16" id="cE9-Gz-a57"/>
-                            <constraint firstItem="Cwm-AJ-Q2G" firstAttribute="centerY" secondItem="hZG-X1-12T" secondAttribute="centerY" id="cLd-GN-NiD"/>
                             <constraint firstItem="yJT-qv-TjW" firstAttribute="trailing" secondItem="HMH-uc-rpO" secondAttribute="trailing" constant="16" id="f52-dq-Kin"/>
-                            <constraint firstItem="Zyg-WF-U58" firstAttribute="top" secondItem="zlN-qc-V5H" secondAttribute="bottom" constant="16" id="hwM-uj-R9z"/>
+                            <constraint firstItem="Zyg-WF-U58" firstAttribute="top" secondItem="Hoc-kq-SIR" secondAttribute="bottom" constant="32" id="hwM-uj-R9z"/>
                             <constraint firstItem="yJT-qv-TjW" firstAttribute="trailing" secondItem="Mag-3T-2mr" secondAttribute="trailing" constant="32" id="rSG-vH-mR8"/>
                             <constraint firstItem="zlN-qc-V5H" firstAttribute="top" secondItem="yJT-qv-TjW" secondAttribute="top" constant="16" id="rgE-lr-Y0q"/>
+                            <constraint firstItem="Hoc-kq-SIR" firstAttribute="top" secondItem="zlN-qc-V5H" secondAttribute="bottom" constant="8" id="wVg-vg-5uA"/>
                             <constraint firstItem="HMH-uc-rpO" firstAttribute="top" secondItem="oNb-cE-Ke4" secondAttribute="bottom" constant="16" id="zBd-5p-mcU"/>
                         </constraints>
                     </view>
